rando/static/css/style.less
/* ... */
/*
 * Remove text-shadow in selection highlight: h5bp.com/i
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between images and the bottom of their containers: h5bp.com/i/440
 */

img {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}


a, input, button {
    -ms-touch-action: none !important;
}




/* ==========================================================================
   Author's custom styles
   ========================================================================== */

/* Mixins */

// Mixins for LESS http://lesshat.com/
@import "vendor/lesshat.less";

.remove-callout(){
  -webkit-touch-callout: none;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-user-select: none;
}

.square-centered (@size) {
    width: @size !important;
    height: @size !important;
    margin-left: -(@size / 2) !important;
    margin-top: -(@size / 2) !important;
}


/* Variables */
@white : #ffffff;
@black : #232222;
@blackLighter : #4d4d4d;
@orange : rgb(248, 148, 6);
@yellow : #ffff00;

/* Landscape phone to portrait tablet */
@screen-sm : 767px;

/* Portrait tablet to landscape and desktop */
@screen-md : 979px;

/* 13 inch devices */
@screen-lg : 1044px;


/* Global */
body, html {
  width: 100%;
  height: 100%;
  position: relative;
  line-height: 1.4em;
  font-size: 13px;
  background-color: white;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Open sans', Arial;
  line-height: 27px;
}

h3 {
  font-size: 18px;
}

h4 {
  font-size: 14px;
}

a {
  color: #625b50;
  .transition(color 100ms);
}

a:visited {
  color: #625b50;
}

a:hover {
  color: #06e;
  text-decoration: none;
}

::-webkit-scrollbar{
  width: 8px;
}

::-webkit-scrollbar-track-piece{
  background-color: #eee;
  -webkit-border-radius:0;
  -webkit-border-bottom-right-radius:0;
  -webkit-border-bottom-left-radius:0;
}

::-webkit-scrollbar-thumb:vertical{
  background-color:#999;
  -webkit-border-radius:8px
}



/*
* Bootstrap override
*/

i.icon {
  display: inline-block;
  width: 14px;
  height: 14px;
  line-height: 14px;
  vertical-align: text-top;
  background-repeat: no-repeat;
}

.container-fluid {
  padding: 0;
}

[class^="icon-gray"],
[class*=" icon-gray"] {
 background-image: url("../img/glyphicons-halflings-gray.png");
}

.popover {
 z-index: 9999; /* Above map, above everything ! */
}

.label, .badge {
  text-shadow: none;
}

.btn {
  font-size: 13px;
  line-height: 19px;
  padding: 4px 10px;
}

.alert {
  padding-right: 14px;
}

/* Jquery UI override */
.ui-widget-content , .ui-widget-overlay, .ui-widget-shadow {
 background: none;
}

/*
* Chosen override
*/

.chzn-container-active .chzn-choices {
 border: 1px solid #AAA;
}

.chzn-container .chzn-results {
  max-height: 190px;
}

.chzn-container .chzn-results .highlighted {
 background-color: #919191;
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#919191', endColorstr='#747474', GradientType=0 );
 background-image: -webkit-gradient(linear, 0 0, 0 100%, color-stop(20%, #919191), color-stop(90%, #747474));
 background-image: -webkit-linear-gradient(top, #919191 20%, #747474 90%);
 background-image: -moz-linear-gradient(top, #919191 20%, #747474 90%);
 background-image: -o-linear-gradient(top, #919191 20%, #747474 90%);
 background-image: linear-gradient(#919191 20%, #747474 90%);
 color: #fff;
}

/* Objects import */
@import "objects/popup.less";

/* Layout */

header {
  position: absolute;
  height: 80px;
  width: 100%;
  z-index: 1;
  padding: 20px;
  background:url(../img/headermercantour.jpg) no-repeat;
  background-size: 100% auto;
  border-bottom: 10px solid white;
  .box-sizing(border-box);
  .box-shadow(0 0 2px rgba(0, 0, 0, 0.1));

  h1 {
    color: #c0392b;
    font-size: 27px;
    font-family: 'Open sans', Arial;
    position: absolute;
    left: 140px;
    top: 17px;
  }
}

#toggle-header-mobile {
  display: none;
}

#container-content {
  position: absolute;
  z-index: 0;
  width: 100%;
  top: 80px;
  bottom: 50px;
 /*margin-top: 80px; */
 /*margin-bottom: 60px;*/
}

#footer {
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 50px;
  bottom: 0;
  .box-shadow(0 0 2px rgba(0, 0, 0, 0.5));
  overflow: hidden;
  background-color: #f0f2ed;
  color: #fff;

  li {
    display: inline;
    height: 100%;
  }
}

ul.row-footer {
  padding: 0;
  text-align: center;

  a {
    display: inline-block;
    vertical-align: middle;
    height: 100%;
    font-size: 0px;
    text-decoration: none;
    // text-indent: 100%;
    // overflow: hidden;
  }
}

#content {
  width:100%;
  height: 100%;
  position:absolute;
  top: 0;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}

#mainmap {
  position: absolute;
  top: 65px;
  bottom: 0;
  width: 100%;

   &:-webkit-full-screen { top: 0; }
   &:-moz-full-screen { top: 0; }
   &:full-screen { top: 0; }
}

#side-bar {
  position: absolute;
  top: 65px;  /* header + search-bar */
  bottom: 0;
  z-index: 900; /* above map */
  min-width: 389px;
}

#detail-container-content {
 // margin-top: 6.5em;
}

#detail-container-content, #flatpage-container-content {
 padding-left: 1%;
 padding-right: 1%;
 width: 98%;
}
/* ... */

